updated fixed to ghost iterations